logs/django-paperworks.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/Wand-0.4.4.egg-info'...
Listing './lib/python3.5/site-packages/auxiliare'...
Listing './lib/python3.5/site-packages/auxiliare/locale'...
Listing './lib/python3.5/site-packages/auxiliare/locale/fr_FR'...
Listing './lib/python3.5/site-packages/auxiliare/locale/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/auxiliare/migrations'...
Listing './lib/python3.5/site-packages/auxiliare/static'...
Listing './lib/python3.5/site-packages/auxiliare/static/auxiliare'...
Listing './lib/python3.5/site-packages/auxiliare/static/auxiliare/css'...
Listing './lib/python3.5/site-packages/auxiliare/static/auxiliare/css/images'...
Listing './lib/python3.5/site-packages/auxiliare/static/auxiliare/css/svgs'...
Listing './lib/python3.5/site-packages/auxiliare/static/auxiliare/img'...
Listing './lib/python3.5/site-packages/auxiliare/static/auxiliare/js'...
Listing './lib/python3.5/site-packages/auxiliare/static/auxiliare/js/vendor'...
Listing './lib/python3.5/site-packages/auxiliare/templates'...
Listing './lib/python3.5/site-packages/auxiliare/templates/accounts'...
Listing './lib/python3.5/site-packages/auxiliare/templates/auxiliare'...
Compiling './lib/python3.5/site-packages/auxiliare/templates/auxiliare/home.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/auxiliare/home.html.py", line 1
    BBBBBBB BBBBBBBBBBB
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/auxiliare/templates/auxiliare.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/auxiliare.html.py", line 1
    BBBB BBBBBB BBBB BBBBBBBBBBB
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/auxiliare/templates/base.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/base.html.py", line 1
    BBBB BBBBBB BBBB BBBBBBBBBBB
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/auxiliare/templates/menu.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/menu.html.py", line 1
    BBBB BBBBBB BBBB BBBBBBBBBBB
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/auxiliare/templates/registration'...
Compiling './lib/python3.5/site-packages/auxiliare/templates/registration/forgotten_password.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/registration/forgotten_password.html.py", line 1
    BBBBBBB BBBBBBBBBBBBBBBB
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/auxiliare/templates/registration/login.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/registration/login.html.py", line 1
    BBBBBBB BBBBBBBBBBB
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/auxiliare/templates/registration/logout.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/registration/logout.html.py", line 1
    BBBBBBB BBBBBBBBBBB
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/auxiliare/templates/registration/password_reset_email.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/registration/password_reset_email.html.py", line 1
    BBBB BBBBBBBBBBBBBB BBB
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/auxiliare/templates/registration/passwordresetemail.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/registration/passwordresetemail.html.py", line 1
    BBBB BBBBBBBBBBBBBB BBB
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/auxiliare/templates/test_template.html.py'...
***   File "./lib/python3.5/site-packages/auxiliare/templates/test_template.html.py", line 1
    BBBBBBB BBBBBBBBBBBBBBBB
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_auxiliare-0.0.4.dist-info'...
Listing './lib/python3.5/site-packages/django_paperworks-0.0.6.dist-info'...
Listing './lib/python3.5/site-packages/paperworks'...
Listing './lib/python3.5/site-packages/paperworks/locale'...
Listing './lib/python3.5/site-packages/paperworks/locale/fr_FR'...
Listing './lib/python3.5/site-packages/paperworks/locale/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/paperworks/migrations'...
Listing './lib/python3.5/site-packages/paperworks/static'...
Listing './lib/python3.5/site-packages/paperworks/static/paperworks'...
Listing './lib/python3.5/site-packages/paperworks/static/paperworks/css'...
Listing './lib/python3.5/site-packages/paperworks/static/paperworks/css/images'...
Listing './lib/python3.5/site-packages/paperworks/static/paperworks/css/svgs'...
Listing './lib/python3.5/site-packages/paperworks/static/paperworks/images'...
Listing './lib/python3.5/site-packages/paperworks/static/paperworks/js'...
Listing './lib/python3.5/site-packages/paperworks/static/paperworks/js/vendor'...
Listing './lib/python3.5/site-packages/paperworks/templates'...
Listing './lib/python3.5/site-packages/paperworks/templates/paperworks'...
Listing './lib/python3.5/site-packages/paperworks/templates/paperworks/papermail_list'...
Listing './lib/python3.5/site-packages/paperworks/tests'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_magic-0.4.15.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/wand'...
Listing './share'...
Listing './share/python-wheels'...
